# Necronomicon

./: .gitignore  3  CMakeLists.txt  LICENSE  Notes.txt  README.md  default.nix
.githooks/: pre-push
data/: minBlep.txt  minBlepCepstrum.txt  minBlepMinimumPhase.txt  minBlepWindowedSinc.txt  necro.supp
data/unicode/: unicode_properties.txt
data/unicode/tables/: alphabetic_table.txt  decimal_table.txt  grapheme_base_table.txt  id_continue_table.txt  id_start_table.txt  lowercase_table.txt  math_table.txt  uppercase_table.txt  whitespace_table.txt  xid_continue_table.txt  xid_start_table.txt
docs/: TODO.txt  notes.txt  semanticThoughts.necro
lib/: base.necro  scala2necro.c  scales.necro
source/: arena.c  arena.h  ast.c  ast.h  d_analyzer.c  d_analyzer.h  driver.c  driver.h  infer.c  infer.h  intern.c  intern.h  lexer.c  lexer.h  math.h  necro.c  necro.cpp  necro.h  parser.c  parser.h  region.c  region.h  renamer.c  renamer.h  runtime.c  runtime.h  slab.c  slab.h  symtable.c  symtable.h  type.c  type.h  utility.c  utility.h  vault.c  vault.h
source/ast/: ast.c  ast.h  d_analyzer.c  d_analyzer.h  symtable.c  symtable.h
source/base/: base.c  base.h
source/codegen/: case.c  case.h  closure.c  closure.h  codegen.c  codegen.h  codegen_llvm.c  codegen_llvm.h
source/core/: closure_conversion.c  closure_conversion.h  core.c  core.h  core_ast.c  core_ast.h  core_create.c  core_create.h  core_final_pass.c  core_final_pass.h  core_infer.c  core_infer.h  core_pretty_print.c  core_pretty_print.h  core_simplify.c  core_simplify.h  defunctionalization.c  defunctionalization.h  fcore.c  fcore.h  lambda_lift.c  lambda_lift.h  node.c  node.h  state_analysis.c  state_analysis.h
source/lex/: lexer.c  lexer.h
source/mach/: mach_ast.c  mach_ast.h  mach_case.c  mach_case.h  mach_print.c  mach_print.h  mach_transform.c  mach_transform.h  mach_type.c  mach_type.h
source/machine/: machine.c  machine.h  machine_build.c  machine_build.h  machine_case.c  machine_case.h  machine_closure.c  machine_closure.h  machine_copy.c  machine_copy.h  machine_persist.c  machine_persist.h  machine_prim.c  machine_prim.h  machine_print.c  machine_print.h  machine_type.c  machine_type.h
source/necro/: driver.c  driver.h  necro.c  necro.h
source/node/: node.c  node.h  node_prim.c  node_prim.h  node_print.c  node_print.h  node_type.c  node_type.h
source/parse/: parse_ast.c  parse_ast.h  parse_test.c  parse_test.h  parser.c  parser.h
source/runtime/: mouse.c  mouse.h  region.c  region.h  runtime.c  runtime.h  runtime_audio.c  runtime_audio.h  runtime_common.h  slab.c  vault.c
source/symbol/: ast_symbol.c  ast_symbol.h  intern.c  intern.h  renamer.c  renamer.h
source/type/: alias_analysis.c  alias_analysis.h  derive.c  derive.h  infer.c  infer.h  kind.c  kind.h  lifetime.c  lifetime.h  monomorphize.c  monomorphize.h  prim.c  prim.h  type.c  type.h  type_class.c  type_class.h  type_class_translate.c  type_class_translate.h
source/utility/: arena.c  arena.h  debug_memory.h  dequeue.h  hash_table.c  hash_table.h  intern.c  intern.h  itoa.c  itoa.h  list.c  list.h  math_utility.h  result.c  result.h  small_array.c  small_array.h  test.c  test.h  unicode_properties.c  unicode_properties.h  utility.c  utility.h
test/: arrayTest.necro  benchmark.necro  binop.txt  bitrot.necro  closureConversionTest.necro  codegenTest.necro  constraintTest.necro  convolve.necro  coreBindTest.necro  coreTest.necro  depTest.necro  derivingTest.necro  doTest.necro  eitherTest.necro  fftTest.necro  inferTest.necro  infer_test.txt  lambdaLift.necro  layout_test.txt  lorem_ipsum.txt  mapTest.necro  math_tests.necro  nodeTest.necro  numTest.necro  num_test.txt  old_audio_runtime.txt  parseErrorTest.necro  parseTest.necro  parse_test.necro  parse_test.txt  parse_test_lets.necro  parse_test_small.txt  patTest.necro  pathologicalType.necro  pathological_type.txt  rename_test.txt  rigidTyperErrorTest.necro  rigidTyperErrorTest.necro~  scoreTest.necro  sfx.necro  (+7 more)
